[package]
name = "step07"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["sqlite"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
dotenv = "0.15.0"
libsqlite3-sys = { version = "0.25.1", default-features = false, features = ["bundled"] }
