[package]
name = "step09"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.11.1" }
axum = "0.5.15"
diesel = { version = "2.0.0", features = ["sqlite"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
dotenv = "0.15.0"
libsqlite3-sys = { version = "0.25.1", default-features = false, features = ["bundled"] }
tokio = { version = "1.21.0", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
